Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.2.15
-
None
-
CentOS Linux release 7.5.1804
x86_64
Description
We've switched from xtrabackup to mariabackup in order to get ability enable compression for some tables. But mariabackup failing with:
error: failed to copy enough redo log
|
We're running backup with this command:
mariabackup --backup --user=root --use-memory=4G --target-dir /backup
|
|
|
180601 02:01:01 Connecting to MySQL server host: localhost, user: root, password: not set, port: 3306, socket: not set
|
Using server version 10.2.15-MariaDB-log
|
/usr/bin/mariabackup based on MariaDB server 10.2.15-MariaDB Linux (x86_64)
|
mariabackup: uses posix_fadvise().
|
mariabackup: cd to /var/lib/mysql/
|
mariabackup: open files limit requested 0, set to 262144
|
mariabackup: using the following InnoDB configuration:
|
mariabackup: innodb_data_home_dir =
|
mariabackup: innodb_data_file_path = ibdata1:100M:autoextend
|
mariabackup: innodb_log_group_home_dir = ./
|
mariabackup: using O_DIRECT
|
2018-06-01 2:01:02 140206076119232 [Note] InnoDB: Number of pools: 1
|
mariabackup: Generating a list of tablespaces
|
2018-06-01 2:01:02 140206076119232 [Warning] InnoDB: Allocated tablespace ID 2318 for deploy_labels/labels, old maximum was 0
|
180601 02:01:11 >> log scanned up to (9527405406246)
|
180601 02:01:11 [01] Copying ibdata1 to /backup/ibdata1
|
180601 02:01:12 >> log scanned up to (9527405502351)
|
180601 02:01:52 [01] ...done
|
180601 02:01:52 [01] Copying ./deploy_labels/labels.ibd to /backup/deploy_labels/labels.ibd
|
180601 02:01:52 [01] ...done
|
180601 02:01:52 [01] Copying ./deploy_labels/push_events.ibd to /backup/deploy_labels/push_events.ibd
|
180601 02:01:52 [01] ...done
|
180601 02:01:52 [01] Copying ./deploy_labels/images.ibd to /backup/deploy_labels/images.ibd
|
180601 02:01:52 [01] ...done
|
180601 02:01:52 [01] Copying ./deploy_labels/tags.ibd to /backup/deploy_labels/tags.ibd
|
180601 02:01:52 [01] ...done
|
180601 02:01:52 [01] Copying ./deploy_labels/__diesel_schema_migrations.ibd to /backup/deploy_labels/__diesel_schema_migrations.ibd
|
180601 02:01:52 [01] ...done
|
|
|
...
|
|
|
180601 03:41:47 Finished backing up non-InnoDB tables and files
|
180601 03:41:47 [01] Copying aria_log.00000001 to /backup/aria_log.00000001
|
180601 03:41:47 [01] ...done
|
180601 03:41:47 [01] Copying aria_log_control to /backup/aria_log_control
|
180601 03:41:47 [01] ...done
|
180601 03:41:47 [00] Writing xtrabackup_binlog_info
|
180601 03:41:47 [00] ...done
|
180601 03:41:47 Executing FLUSH NO_WRITE_TO_BINLOG ENGINE LOGS...
|
mariabackup: The latest check point (for incremental): '9528096474361'
|
mariabackup: Stopping log copying thread.
|
|
|
2018-06-01 3:41:47 140206076119232 [Note] InnoDB: Read redo log up to LSN=9527405501952
|
180601 03:41:47 >> log scanned up to (9527405501952)
|
180601 03:41:47 Executing UNLOCK TABLES
|
180601 03:41:47 All tables unlocked
|
180601 03:41:47 [00] Copying ib_buffer_pool to /backup/ib_buffer_pool
|
180601 03:41:47 [00] ...done
|
180601 03:41:47 Backup created in directory '/backup/'
|
MySQL binlog position: filename 'mysql-bin.000004', position '328', GTID of the last change '0-2-6715969130'
|
180601 03:41:47 [00] Writing backup-my.cnf
|
180601 03:41:47 [00] ...done
|
180601 03:41:47 [00] Writing xtrabackup_info
|
180601 03:41:47 [00] ...done
|
mariabackup: Redo log (from LSN 9527342444268 to 9527405501952) was copied.
|
mariabackup: error: failed to copy enough redo log (LSN=9527405501952; checkpoint LSN=9528096474361).
|
|
The same problem from someone at stackoverflow:
https://stackoverflow.com/questions/50115613/mariadb-backup-tool-mariabackup-failing-with-error
Attachments
Issue Links
- causes
-
MDEV-17149 mariabackup hangs if innodb is not started
-
- Closed
-
- relates to
-
MDEV-16568 mariabackup.log_checksum_mismatch failed in buildbot with errors sequence number is in the future
-
- Closed
-
-
MDEV-16569 mariabackup.xb_file_key_management failed in buildbot with Table 'test.t' doesn't exist in engine
-
- Closed
-